--- a/backend/public/email-template.html
+++ b/backend/public/email-template.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Account Details</title>
+    <title>Chi tiết tài khoản</title>
   </head>
   <body style="margin: 0; padding: 0; background-color: #f4f4f4">
     <table
@@ -37,8 +37,8 @@
             <tr>
               <td align="center" style="padding: 20px 0">
                 <img
-                  src="https://www.justforcode.in/images/logo.jpg"
-                  alt="Company Logo"
+                  src=""
+                  alt="Logo công ty"
                   width="120"
                   style="display: block"
                 />
@@ -56,17 +56,17 @@
                   font-weight: bold;
                 "
               >
-                JFC Corporative Bank
+                Ngân hàng Doanh nghiệp JFC
               </td>
             </tr>
 
             <tr>
               <td style="padding: 20px">
                 <h2 style="font-size: 20px; margin-bottom: 15px; color: #333">
-                  Welcome to Our Platform!
+                  Chào mừng bạn đến với nền tảng của chúng tôi!
                 </h2>
                 <p style="font-size: 16px; color: #555">
-                  Here are your login credentials:
+                  Dưới đây là thông tin đăng nhập của bạn:
                 </p>
                 <table
                   cellpadding="10"
@@ -75,20 +75,21 @@
                   style="margin-top: 10px; border: 1px solid #ddd"
                 >
                   <tr style="background-color: #f9f9f9">
-                    <td style="font-weight: bold; width: 30%">Username:</td>
+                    <td style="font-weight: bold; width: 30%">
+                      Tên đăng nhập:
+                    </td>
                     <td>user@example.com</td>
                   </tr>
                   <tr style="background-color: #f9f9f9">
-                    <td style="font-weight: bold">Password:</td>
+                    <td style="font-weight: bold">Mật khẩu:</td>
                     <td>yourpassword123</td>
                   </tr>
                 </table>
                 <p style="margin-top: 20px; font-size: 14px; color: #888">
-                  Please keep this information secure and do not share it with
-                  anyone.
+                  Vui lòng bảo mật thông tin này và không chia sẻ cho bất kỳ ai.
                 </p>
                 <p style="margin-top: 30px; font-size: 16px">
-                  Best regards,<br /><br />
+                  Trân trọng,<br /><br />
                   <strong>Just For Code</strong>
                 </p>
               </td>
@@ -104,7 +105,7 @@
                   color: #666;
                 "
               >
-                &copy; 2025 JFC Corporative Bank . All rights reserved.
+                &copy; 2025 Ngân hàng Doanh nghiệp. Mọi quyền được bảo lưu.
               </td>
             </tr>
           </table>
